--- a/zh-tw/privacy-policy/index.html
+++ b/zh-tw/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>本隐私政策描述了我们在您使用服务时收集、使用和披露您的信息的政策和程序，并告诉您您的隐私权以及法律如何保护您。</p>
         </div>
         <div class="paragraph">
-          <p>我们使用您的个人数据来提供和改进服务。通过使用服务，您同意按照本隐私政策收集和使用信息。本隐私政策是在 <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">隐私政策模板 <img src= 的帮助下创建的"../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a>.</p>
+          <p>我们使用您的个人数据来提供和改进服务。通过使用服务，您同意按照本隐私政策收集和使用信息。本隐私政策是在 <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">隐私政策模板 <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></a>.</p>
         </div>
 
 
@@ -303,7 +303,7 @@
             </li>
             <li>
               <p>
-                <strong>Flash Cookie。</strong> 我们服务的某些功能可能会使用本地存储的对象（或 Flash Cookie）来收集和存储有关您的偏好或您在我们服务上的活动的信息。 Flash Cookie 的管理方式与浏览器 Cookie 所用的浏览器设置不同。有关如何删除 Flash Cookie 的更多信息，请阅读“我在哪里可以更改禁用或删除本地共享对象的设置？”可在 <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" 样式="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../. ./media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a>
+                <strong>Flash Cookie。</strong> 我们服务的某些功能可能会使用本地存储的对象（或 Flash Cookie）来收集和存储有关您的偏好或您在我们服务上的活动的信息。 Flash Cookie 的管理方式与浏览器 Cookie 所用的浏览器设置不同。有关如何删除 Flash Cookie 的更多信息，请阅读“我在哪里可以更改禁用或删除本地共享对象的设置？”可在 <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank" style="overflow-wrap: break-word;">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a>
               </p>
             </li>
             <li>
@@ -499,8 +499,8 @@
           <ul>
             <li>
               <p>通过电子邮件：<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons /outlined/white/Open in New.svg" alt="在新标签中打开"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons /outlined/white/Open in New.svg" alt="在新标签中打开"></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a></p>
             </li>
             <li>
               <p>通过访问我们网站上的此页面：<br>
