--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -187,7 +187,7 @@
         </div>
 
         <div class="date">
-          <p>Last na nai-updated: January 27, 2022</p>
+          <p>Last na nai-update: January 27, 2022</p>
         </div>
         
         <div class="paragraph">
