--- a/ru-ru/privacy-policy/index.html
+++ b/ru-ru/privacy-policy/index.html
@@ -146,7 +146,7 @@
                 <img src="../../media/store/rfbstore.svg" alt="RFB Store" >
               </div>
               <div class="selection-h">
-                <h6>RFB Store</h6>
+                <span class="user notranslate"><h6>RFB Store</h6></span>
               </div>
             </div>
           </a>
@@ -213,7 +213,7 @@
               <p><strong>Учетная запись</strong> – уникальная учетная запись, созданная для Вас для доступа к нашему Сервису или его частям.</p>
             </li>
             <li>
-              <p><strong>Команда</strong> (именуемая в настоящем Соглашении «Команда», «Мы», «Нас» или «Наш») относится к RareFrostbites.</p>
+              <p><strong>Команда</strong> (именуемая в настоящем Соглашении «Команда», «Мы», «Нас» или «Наш») относится к <span class="user notranslate">RareFrostbites</span>.</p>
             </li>
             <li>
               <p><strong>Файлы cookie</strong> – это небольшие файлы, размещаемые веб-сайтом на Вашем компьютере, мобильном устройстве или любом другом устройстве, которые содержат сведения о Вашей истории посещений этого веб-сайта среди множества его использований.</p>
@@ -237,7 +237,7 @@
               <p><strong>Данные об использовании</strong> — это автоматически собираемые данные, которые создаются либо при использовании Сервиса, либо из самой инфраструктуры Сервиса (например, продолжительность посещения страницы).</p>
             </li>
             <li>
-              <p><strong>Веб-сайт</strong> относится к команде RareFrostbites, доступ к которой можно получить по адресу <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></ р>
+              <p><strong>Веб-сайт</strong> относится к <span class="user notranslate">RareFrostbites Team</span>, доступ к которой можно получить по адресу <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></ р>
             </li>
             <li>
               <p><strong>Вы</strong> означает физическое лицо, осуществляющее доступ к Сервису или использующее его, или команду/студии, или другое юридическое лицо, от имени которого такое физическое лицо осуществляет доступ к Сервису или использует его, в зависимости от обстоятельств.</p>
@@ -601,60 +601,62 @@
           <h5></h5>
         </div>
 
-        <div class="language">
-          <div class="current" id="current" onclick="openLanguage()">
-            <img src="https://flagcdn.com/ru.svg" width="30" alt="Россия">
-            <h6>RU</h6>
+        <span class="user notranslate">
+          <div class="language">
+            <div class="current" id="current" onclick="openLanguage()">
+              <img src="https://flagcdn.com/ru.svg" width="30" alt="Россия">
+              <h6>RU</h6>
+            </div>
+  
+            <div class="selection" id="selection">
+              <div class="select" style="margin-top: 0px;">
+                <a href="/my-bu/privacy-policy/"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Малайзия"> BU</h5></a>
+              </div>
+              <div class="select">
+                <a href="/zh-cn/privacy-policy/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Китай"> CN</h5></a>
+              </div>
+              <div class="select">
+                <a href="/es-es/privacy-policy/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Испания"> ES</h5></a>
+              </div>
+              <div class="select">
+                <a href="/id-id/privacy-policy/"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Индонезия"> ID</h5></a>
+              </div>
+              <div class="select">
+                <a href="/hi-in/privacy-policy/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Индия"> IN</h5></a>
+              </div>
+              <div class="select">
+                <a href="/ja-jp/privacy-policy/"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Япония"> JP</h5></a>
+              </div>
+              <div class="select">
+                <a href="/km-kh/privacy-policy/"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="Камбоджа"> KH</h5></a>
+              </div>
+              <div class="select">
+                <a href="/ko-kr/privacy-policy/"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="Корея"> KR</h5></a>
+              </div>
+              <div class="select">
+                <a href="/ms-my/privacy-policy/"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Малайзия"> MY</h5></a>
+              </div>
+              <div class="select">
+                <a href="/fil-ph/privacy-policy/"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="Филиппины"> PH</h5></a>
+              </div>
+              <div class="select">
+                <a href="/pt-pt/privacy-policy/"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="Португалия"> PT</h5></a>
+              </div>
+              <div class="select">
+                <a href="/zh-tw/privacy-policy/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Тайвань"> TW</h5></a>
+              </div>
+              <div class="select">
+                <a href="/en-uk/privacy-policy/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="объединенное Королевство"> UK</h5></a>
+              </div>
+              <div class="select">
+                <a href="/en-us/privacy-policy/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Соединенные Штаты"> US</h5></a>
+              </div>
+              <div class="select" style="margin-bottom: 0px;">
+                <a href="/vi-vn/privacy-policy/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Вьетнам"> VN</h5></a>
+              </div>
+            </div>
           </div>
-
-          <div class="selection" id="selection">
-            <div class="select" style="margin-top: 0px;">
-              <a href="/my-bu/privacy-policy/"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="Малайзия"> BU</h5></a>
-            </div>
-            <div class="select">
-              <a href="/zh-cn/privacy-policy/"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="Китай"> CN</h5></a>
-            </div>
-            <div class="select">
-              <a href="/es-es/privacy-policy/"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="Испания"> ES</h5></a>
-            </div>
-            <div class="select">
-              <a href="/id-id/privacy-policy/"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="Индонезия"> ID</h5></a>
-            </div>
-            <div class="select">
-              <a href="/hi-in/privacy-policy/"><h5><img src="https://flagcdn.com/in.svg" width="30" alt="Индия"> IN</h5></a>
-            </div>
-            <div class="select">
-              <a href="/ja-jp/privacy-policy/"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="Япония"> JP</h5></a>
-            </div>
-            <div class="select">
-              <a href="/km-kh/privacy-policy/"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="Камбоджа"> KH</h5></a>
-            </div>
-            <div class="select">
-              <a href="/ko-kr/privacy-policy/"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="Корея"> KR</h5></a>
-            </div>
-            <div class="select">
-              <a href="/ms-my/privacy-policy/"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="Малайзия"> MY</h5></a>
-            </div>
-            <div class="select">
-              <a href="/fil-ph/privacy-policy/"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="Филиппины"> PH</h5></a>
-            </div>
-            <div class="select">
-              <a href="/pt-pt/privacy-policy/"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="Португалия"> PT</h5></a>
-            </div>
-            <div class="select">
-              <a href="/zh-tw/privacy-policy/"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="Тайвань"> TW</h5></a>
-            </div>
-            <div class="select">
-              <a href="/en-uk/privacy-policy/"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="объединенное Королевство"> UK</h5></a>
-            </div>
-            <div class="select">
-              <a href="/en-us/privacy-policy/"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="Соединенные Штаты"> US</h5></a>
-            </div>
-            <div class="select" style="margin-bottom: 0px;">
-              <a href="/vi-vn/privacy-policy/"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="Вьетнам"> VN</h5></a>
-            </div>
-          </div>
-        </div>
+        </span>
       </div>
     </div>
   </body>
