--- a/es-es/privacy-policy/index.html
+++ b/es-es/privacy-policy/index.html
@@ -492,7 +492,7 @@
               <li>
                 <p>Por correo electrónico:<br>
                   <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Abrir en una pestaña nueva"></a><br>
-                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Abrir en una pestaña nueva"></a></p>
+                  <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Abrir en una pestaña nueva"></a></p>
               </li>
               <li>
                 <p>Al visitar esta página en nuestro sitio web:<br>
