--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -493,7 +493,7 @@
             <li>
               <p>Gamit ang email:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buksan sa bagong tab"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buksan sa bagong tab"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buksan sa bagong tab"></a></p>
             </li>
             <li>
               <p>Gamit ang pagbi-visit sa page na'to sa'ming website:<br>
