--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -492,7 +492,7 @@
               <li>
                 <p>ईमेल द्वारा:<br>
                   <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="नए टैब में खोलें"></a><br>
-                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="नए टैब में खोलें"></a></p>
+                  <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="नए टैब में खोलें"></a></p>
               </li>
               <li>
                 <p>हमारी वेबसाइट पर इस पेज पर जाकर:<br>
