--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -494,7 +494,7 @@
             <li>
               <p>メール：<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="新しいタブで開く"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="新しいタブで開く"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left:10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="新しいタブで開く"></a></p>
             </li>
             <li>
               <p>当社のウェブサイトのこのページにアクセスして：<br>
