--- a/km-kh/privacy-policy/index.html
+++ b/km-kh/privacy-policy/index.html
@@ -493,7 +493,7 @@
             <li>
               <p>តាមអ៊ីមែល៖<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="បើកក្នុងផ្ទាំងថ្មី។"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="បើកក្នុងផ្ទាំងថ្មី។"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="បើកក្នុងផ្ទាំងថ្មី។"></a></p>
             </li>
             <li>
               <p>ដោយចូលទៅកាន់ទំព័រនេះនៅលើគេហទំព័ររបស់យើង៖<br>
