--- a/ko-kr/privacy-policy/index.html
+++ b/ko-kr/privacy-policy/index.html
@@ -493,7 +493,7 @@
             <li>
               <p>이메일:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="새 탭에서 열기"></a></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="새 탭에서 열기"></a></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="새 탭에서 열기"></a></a></p>
             </li>
             <li>
               <p>당사 웹사이트에서 이 페이지를 방문하면:<br>
