--- a/ms-my/privacy-policy/index.html
+++ b/ms-my/privacy-policy/index.html
@@ -493,7 +493,7 @@
             <li>
               <p>Melalui e-mel:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buka dalam tab baharu"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buka dalam tab baharu"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buka dalam tab baharu"></a></p>
             </li>
             <li>
               <p>Dengan melawat halaman ini di tapak web kami:<br>
