--- a/my-bu/privacy-policy/index.html
+++ b/my-bu/privacy-policy/index.html
@@ -493,7 +493,7 @@
             <li>
               <p>အီးမေးလ်ဖြင့်-<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="တက်ဘ်အသစ်တွင် ဖွင့်ပါ။"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="တက်ဘ်အသစ်တွင် ဖွင့်ပါ။"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="တက်ဘ်အသစ်တွင် ဖွင့်ပါ။"></a></p>
             </li>
             <li>
               <p>ကျွန်ုပ်တို့၏ဝဘ်ဆိုဒ်တွင် ဤစာမျက်နှာကို ဝင်ရောက်ကြည့်ရှုခြင်းဖြင့်-<br>
