--- a/pt-pt/privacy-policy/index.html
+++ b/pt-pt/privacy-policy/index.html
@@ -492,7 +492,7 @@
             <li>
               <p>Por e-mail:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons /outlined/white/Abrir em New.svg" alt="Abrir em nova guia"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons /outlined/white/Abrir em New.svg" alt="Abrir em nova guia"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons /outlined/white/Abrir em New.svg" alt="Abrir em nova guia"></a></p>
             </li>
             <li>
               <p>Visitando esta página em nosso site:<br>
