--- a/vi-vn/privacy-policy/index.html
+++ b/vi-vn/privacy-policy/index.html
@@ -493,7 +493,7 @@
             <li>
               <p>Qua email:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">Rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt=" Mở trong tab mới"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">Rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt=" Mở trong tab mới"></a>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">Rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt=" Mở trong tab mới"></a>
               </p>
             </li>
             <li>
