--- a/id-id/privacy-policy/index.html
+++ b/id-id/privacy-policy/index.html
@@ -491,7 +491,7 @@
               <li>
                 <p>Melalui email:<br>
                   <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buka di tab baru"></a><br>
-                  <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buka di tab baru"></a></p>
+                  <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Buka di tab baru"></a></p>
               </li>
               <li>
                 <p>Dengan mengunjungi halaman ini di situs web kami:<br>
