--- a/ru-ru/privacy-policy/index.html
+++ b/ru-ru/privacy-policy/index.html
@@ -492,7 +492,7 @@
             <li>
               <p>По электронной почте:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../../media/assets/icons /outlined/white/Open in New.svg" alt="Открыть в новой вкладке"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../../media/assets/icons /outlined/white/Open in New.svg" alt="Открыть в новой вкладке"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../../media/assets/icons /outlined/white/Open in New.svg" alt="Открыть в новой вкладке"></a></p>
             </li>
             <li>
               <p>Посетив эту страницу на нашем веб-сайте:<br>
