--- a/zh-tw/privacy-policy/index.html
+++ b/zh-tw/privacy-policy/index.html
@@ -492,7 +492,7 @@
             <li>
               <p>通过电子邮件：<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a></p>
+                <a href="mailto:rarefrostbitesteam@outlook.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="在新标签中打开"></a></p>
             </li>
             <li>
               <p>通过访问我们网站上的此页面：<br>
