--- a/id-id/index.html
+++ b/id-id/index.html
@@ -230,7 +230,7 @@
                   <div class="selection">
                     <img src="../media/assets/spay/Spay/Spay.svg" alt="Logo Spay">
                     <span class="user notranslate"><h3 style="margin-bottom: 5px;">Spay</h3></span>
-                    <h6>SEGERA AKAN DATANG...</h6>
+                    <h6>AKAN DATANG...</h6>
                   </div>
                 </div>
               </div>
