--- a/hi-in/contact.html
+++ b/hi-in/contact.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="RareFrostbites Team पर हमसे संपर्क करें">
     <meta name="description" content="क्या हमारे पैक्स में कोई समस्या है? क्या आपके पास हमारे लिए कोई सुझाव है? हमें बताऐ!">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Contact Page, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Hindi">
     <meta charset="utf-8"> 
