--- a/id-id/contact/index.html
+++ b/id-id/contact/index.html
@@ -177,7 +177,7 @@
               <div class="email-logo-click">
                 <div class="email-logo">
                   <dev class="selection">
-                    <img src="../../media/contact/Gmail.svg" alt="Gmail logo">
+                    <img src="../../media/contact/Gmail.svg" alt="Logo Gmail">
                     <span class="user notranslate"><h2>Gmail</h2></span>
                   </dev>
                 </div>
@@ -190,7 +190,7 @@
               <div class="email-logo-click">
                 <div class="email-logo">
                   <dev class="selection">
-                    <img src="../../media/contact/Outlook.svg" alt="Outlook logo">
+                    <img src="../../media/contact/Outlook.svg" alt="Logo Outlook">
                     <span class="user notranslate"><h2>Outlook</h2></span>
                   </dev>
                 </div>
@@ -209,7 +209,7 @@
               <div class="email-logo-click">
                 <div class="email-logo">
                   <dev class="selection">
-                    <img src="../../media/contact/Petal Mail.png" alt="Petal Mail logo">
+                    <img src="../../media/contact/Petal Mail.png" alt="Logo Petal Mail">
                     <span class="user notranslate"><h2>Petal Mail</h2></span>
                   </dev>
                 </div>
