--- a/ru-ru/404.html
+++ b/ru-ru/404.html
@@ -102,7 +102,7 @@
           <div class="desktop-sidebar-area">
             <a href="https://rarefrostbites.pages.dev/ru-ru/" style="margin-left: 20px;"><h2>Домой</h2></a>
             <a href="https://rarefrostbites.pages.dev/ru-ru/apply/"><h2>Применять<h3></a>
-            <a href="https://rarefrostbites.pages.dev/ru-ru/contact/"><h2>Связаться с нами</h3></a>
+            <a href="https://rarefrostbites.pages.dev/ru-ru/contact/"><h2>Связаться с Нами</h3></a>
             <a href="https://rarefrostbites.pages.dev/ru-ru/privacy-policy/" style="margin-right: 5px;"><h2>Политика конфиденциальности</h3></a>
           </div>
         </div>
@@ -161,7 +161,7 @@
           </div>
           <a href="https://rarefrostbites.pages.dev/ru-ru/"><h2>Домой</h2></a>
           <a href="https://rarefrostbites.pages.dev/ru-ru/apply/"><h2>Применять<h2></a>
-          <a href="https://rarefrostbites.pages.dev/ru-ru/contact/"><h2>Связаться с нами</h2></a>
+          <a href="https://rarefrostbites.pages.dev/ru-ru/contact/"><h2>Связаться с Нами</h2></a>
           <a href="https://rarefrostbites.pages.dev/ru-ru/privacy-policy/"><h2>Политика конфиденциальности</h2></a>
         </div>
       </div>
@@ -270,7 +270,7 @@
 
         <div class="pricon">
           <a href="https://rarefrostbites.pages.dev/ru-ru/privacy-policy/"><h5>Политика конфиденциальности</h5></a>
-          <a href="https://rarefrostbites.pages.dev/ru-ru/contact/"><h5>Связаться с нами</h5></a>
+          <a href="https://rarefrostbites.pages.dev/ru-ru/contact/"><h5>Связаться с Нами</h5></a>
         </div>
 
         <div class="year">
