--- a/ru-ru/index.html
+++ b/ru-ru/index.html
@@ -102,7 +102,7 @@
         <div class="desktop-sidebar">
           <div class="desktop-sidebar-area">
             <a href="../ru-ru/apply/" style="margin-left: 20px;"><h2>Применять</h3></a>
-            <a href="../ru-ru/contact/"><h2>Связаться с нами</h3></a>
+            <a href="../ru-ru/contact/"><h2>Связаться с Нами</h3></a>
             <a href="../ru-ru/privacy-policy/" style="margin-right: 5px;"><h2>Политика конфиденциальности</h3></a>
           </div>
         </div>
@@ -160,7 +160,7 @@
             </div>
           </div>
           <a href="../ru-ru/apply/"><h2>Применять</h2></a>
-          <a href="../ru-ru/contact/"><h2>Связаться с нами</h2></a>
+          <a href="../ru-ru/contact/"><h2>Связаться с Нами</h2></a>
           <a href="../ru-ru/privacy-policy/"><h2>Политика конфиденциальности</h2></a>
         </div>
       </div>
@@ -230,7 +230,7 @@
                   <div class="selection">
                     <img src="../media/assets/spay/Spay/Spay.svg" alt="Spay">
                     <span class="user notranslate"><h3 style="margin-bottom: 5px;">Spay</h3></span>
-                    <h6>ВСКОРЕ...</h6>
+                    <h6>Скоро будет...</h6>
                   </div>
                 </div>
               </div>
@@ -331,7 +331,7 @@
 
         <div class="pricon">
           <a href="../ru-ru/privacy-policy/"><h5>Политика конфиденциальности</h5></a>
-          <a href="../ru-ru/contact/"><h5>Связаться с нами</h5></a>
+          <a href="../ru-ru/contact/"><h5>Связаться с Нами</h5></a>
         </div>
 
         <div class="year">
