--- a/ru-ru/privacy-policy/index.html
+++ b/ru-ru/privacy-policy/index.html
@@ -106,7 +106,7 @@
           <div class="desktop-sidebar-area">
             <a href="../../ru-ru/" style="margin-left: 20px;"><h2>Домой</h2></a>
             <a href="../../ru-ru/apply/"><h2>Применять<h3></a>
-            <a href="../../ru-ru/contact/" style="margin-right: 5px;"><h2>Связаться с нами</h3></a>
+            <a href="../../ru-ru/contact/" style="margin-right: 5px;"><h2>Связаться с Нами</h3></a>
           </div>
         </div>
         <div class="mobile-products" onclick="openProducts()">
@@ -164,7 +164,7 @@
           </div>
           <a href="../../ru-ru/"><h2>Домой</h2></a>
           <a href="../../ru-ru/apply/"><h2>Применять<h2></a>
-          <a href="../../ru-ru/contact/"><h2>Связаться с нами</h2></a>
+          <a href="../../ru-ru/contact/"><h2>Связаться с Нами</h2></a>
         </div>
       </div>
       
@@ -482,10 +482,10 @@
         </div>
 
         <див класс="title">
-          <h1>Связаться с нами</h1>
+          <h1>Связаться с Нами</h1>
         </div>
         <div класс="paragraph">
-          <p>Если у вас есть какие-либо вопросы об этой Политике конфиденциальности, вы можете связаться с нами:</p>
+          <p>Если у вас есть какие-либо вопросы об этой Политике конфиденциальности, вы можете Связаться с Нами:</p>
         </div>
         <div класс="caption">
           <ул>
@@ -594,7 +594,7 @@
         </div>
 
         <div class="pricon">
-          <a href="../../ru-ru/contact/"><h5>Связаться с нами</h5></a>
+          <a href="../../ru-ru/contact/"><h5>Связаться с Нами</h5></a>
         </div>
 
         <div class="year">
