--- a/ms-my/contact.html
+++ b/ms-my/contact.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="Hubungi Kami di RareFrostbites Team">
     <meta name="description" content="Adakah terdapat sebarang masalah dengan Pek kami? Adakah anda mempunyai sebarang cadangan untuk kami? Beritahu kami!">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Contact Page, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Malay">
     <meta charset="utf-8"> 
