--- a/my-bu/contact.html
+++ b/my-bu/contact.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="RareFrostbites Team တွင် ကျွန်ုပ်တို့ထံ ဆက်သွယ်ပါ။">
     <meta name="description" content="ကျွန်ုပ်တို့၏ Packs များတွင် ပြဿနာတစ်စုံတစ်ရာရှိပါသလား။ သင့်တွင် ကျွန်ုပ်တို့အတွက် အကြံဉာဏ်များ ရှိပါသလား။ ငါတို့ကိုသိပါစေ!"">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Contact Page, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Burmese">
     <meta charset="utf-8"> 
