--- a/pt-pt/contact.html
+++ b/pt-pt/contact.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="Entre em contato conosco na RareFrostbites Team">
     <meta name="description" content="Há algum problema com os nossos Packs? Você tem alguma sugestão para nós? Nos informe!">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Contact Page, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Portuguese">
     <meta charset="utf-8"> 
