--- a/ru-ru/contact.html
+++ b/ru-ru/contact.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="Свяжитесь с Нами по RareFrostbites Team">
     <meta name="description" content="Есть ли проблемы с нашими пакетами? У вас есть предложения для нас? Дайте нам знать!">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Contact Page, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Russian">
     <meta charset="utf-8"> 
