--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -39,15 +39,15 @@
       name="description"
       content="Every Frostbits' safety is our top priority."
     />
-    <meta name="keywords" content="Homepage, RareFrostbites" />
+    <meta name="keywords" content="Privacy Policy, RareFrostbites" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta content="width=device-width,minimum-scale=1.0" name="viewport" />
 
-    <link rel="shortcut icon" href="/media/assets/privacy-policy/rfbsafe.ico" />
-    <link rel="canonical" href="/" />
+    <link rel="shortcut icon" href="https://rarefrostbites.pages.dev/media/assets/privacy-policy/rfbsafe.ico" />
+    <link rel="canonical" href="https://rarefrostbites.pages.dev/privacy-policy" />
 
     <!--address bar color-->
     <meta name="theme-color" content="#15152A" />
@@ -61,7 +61,7 @@
     />
 
     <!--fonts-->
-    <link rel="stylesheet" href="../css/assets/fonts.css" />
+    <link rel="stylesheet" href="/css/assets/fonts.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
