--- a/store/index.html
+++ b/store/index.html
@@ -52,6 +52,8 @@
     />
 
     <!--fonts-->
+    <link rel="stylesheet" href="/styles/assets/fonts.css" />
+    <link rel="preload" href="/fonts/Minecraft-Ten.ttf" as="font" type="font/ttf" crossorigin>
 
     <!--lottie webplayer-->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
