--- a/store/index.html
+++ b/store/index.html
@@ -53,7 +53,6 @@
 
     <!--fonts-->
     <link rel="stylesheet" href="/styles/assets/fonts.css" />
-    <link rel="preload" href="/fonts/Minecraft-Ten.ttf" as="font" type="font/ttf" crossorigin>
 
     <!--lottie webplayer-->
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -68,8 +67,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/include.components.js"></script>
 
-    <script src="/js/store/language/initialize.js"></script>
     <script src="/js/store/assets/language.js"></script>
+    <script src="/js/language/initialize.js"></script>
     <script>
       include("/components/store/assets/header.html", "", "div.header", 0);
       include("/components/store/index/content.html", "", "div.content", 0);
@@ -166,13 +165,13 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/include.components.js"></script>
 
-    <script src="/store/js/language/initialize.js"></script>
-    <script src="/store/js/assets/language.js"></script>
+    <script src="/js/store/language/initialize.js"></script>
+    <script src="/js/store/assets/language.js"></script>
     <script>
       include("/store/components/assets/header.html", "", "div.header", 0);
       include("/store/components/index/content.html", "", "div.content", 0);
     </script>
-    <script defer src="/store/js/assets/header.js"></script>
+    <script defer src="/js/store/assets/header.js"></script>
     <script defer>
       $(function () {
         setTimeout(initializeLanguage, 500);
