--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     />
 
     <!--fonts-->
-    <link rel="stylesheet" href="/styles/assets/fonts.css" />
+    <link rel="stylesheet" href="/css/assets/fonts.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -67,6 +67,7 @@
     <!-- css -->
     <link rel="stylesheet" href="/styles/assets/body.css" />
     <link rel="stylesheet" href="/styles/assets/content.css" />
+    <link rel="stylesheet" href="/styles/assets/fonts.css" />
     <link rel="stylesheet" href="/styles/assets/footer.css" />
     <link rel="stylesheet" href="/styles/assets/header.css" />
     <link rel="stylesheet" href="/styles/assets/products.css" />
