--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -71,6 +71,7 @@
 
     <script src="/js/store/packs/com.rarefrostbites.10.ya_ea.js"></script>
     <script src="/js/store/language/initialize.js"></script>
+    <script src="/js/store/language/pi-m.js"></script>
     <script src="/js/store/assets/language.js"></script>
     <script>
       include("/components/store/pack/header.html", "", "div.header", 0);
