--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -100,6 +100,10 @@
       <div id="mobile-sidebar-area" class="mobile-sidebar"></div>
 
       <div class="content"></div>
+      
+      <div class="pr">
+        <div class="powr-reviews" id="80ab06c0_1655038097"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+      </div>
     </div>
   </body>
 </html>
