--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -5,29 +5,29 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="RFB Store" />
-    <meta property="og:url" content="https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea/" />
+    <meta property="og:url" content="https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea" />
     <meta property="og:title" content="Ya Ea - RareFrostbites Team | RFB Store" />
     <meta property="og:description" content="Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure." />
     <meta
       property="og:image"
-      content="https://rarefrostbites.pages.dev/media/store/assets/store.jpg"
+      content="https://rarefrostbites.pages.dev/media/store/com.rarefrostbites.10.ya_ea.jpg"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea/"
+      content="https://rarefrostbites.pages.dev/store/com.rarefrostbites.10.ya_ea"
     />
     <meta property="twitter:title" content="Ya Ea - RareFrostbites Team | RFB Store" />
     <meta property="twitter:description" content="Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure." />
     <meta
       property="twitter:image"
-      content="https://rarefrostbites.pages.dev/media/store/assets/store.jpg"
+      content="https://rarefrostbites.pages.dev/media/store/com.rarefrostbites.10.ya_ea.jpg"
     />
 
     <meta name="title" content="Ya Ea - RareFrostbites Team | RFB Store" />
     <meta name="description" content="Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure." />
-    <meta name="keywords" content="RFB Store, RareFrostbites Team" />
+    <meta name="keywords" content="Ya Ea, RFB Store, RareFrostbites Team" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
     <meta charset="utf-8" />
