--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -82,6 +82,11 @@
       $(function () {
         setTimeout(initializeLanguage, 500);
       });
+      
+      
+      $(function () {
+        setTimeout(PackLanguage, 500);
+      });
     </script>
     <script src="https://www.powr.io/powr.js?platform=html"></script>
   </head>
