--- a/store/index.html
+++ b/store/index.html
@@ -80,6 +80,11 @@
       $(function () {
         setTimeout(initializeLanguage, 500);
       });
+      
+      
+      $(function () {
+        setTimeout(HomepageLanguage, 500);
+      });
     </script>
   </head>
   <body>
