--- a/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -62,14 +62,14 @@
     <link rel="stylesheet" href="/styles/store/assets/content.css" />
     <link rel="stylesheet" href="/styles/store/assets/header.css" />
 
-    <link rel="stylesheet" href="/styles/store/com.rarefrostbites.10.ya_ea.css">
+    <link rel="stylesheet" href="/styles/store/pack/content.css">
     <link rel="stylesheet" href="/styles/store/pack/header.css" />
 
     <!--js-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/include.components.js"></script>
 
-    <script src="/js/store/packs/com.rarefrostbites.10.ya_ea.js"></script>
+    <script src="/js/store/packs/com.rarefrostbites.9.rarechristmas_bundle.js"></script>
     <script src="/js/store/language/initialize.js"></script>
     <script src="/js/store/language/pi-m.js"></script>
     <script src="/js/store/assets/language.js"></script>
@@ -93,11 +93,7 @@
   <body>
     <div class="body">
       <div id="fb-root"></div>
-      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0" nonce="QYlt4ZkG"></script>
-
-      <div class="products-untap" id="products" onclick="closeProducts()"></div>
-      <div class="sidebar-untap" id="sidebar" onclick="closeSidebar()"></div>
-      <div class="language-untap" id="language" onclick="closeLanguage()"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0" nonce="uwBXJ2md"></script>
 
       <div class="popup-remove"></div>
 
