--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -62,7 +62,7 @@
     <link rel="stylesheet" href="/styles/store/assets/content.css" />
     <link rel="stylesheet" href="/styles/store/assets/header.css" />
 
-    <link rel="stylesheet" href="/styles/store/com.rarefrostbites.10.ya_ea.css">
+    <link rel="stylesheet" href="/styles/store/pack/content.css">
     <link rel="stylesheet" href="/styles/store/pack/header.css" />
 
     <!--js-->
@@ -93,11 +93,7 @@
   <body>
     <div class="body">
       <div id="fb-root"></div>
-      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0" nonce="QYlt4ZkG"></script>
-
-      <div class="products-untap" id="products" onclick="closeProducts()"></div>
-      <div class="sidebar-untap" id="sidebar" onclick="closeSidebar()"></div>
-      <div class="language-untap" id="language" onclick="closeLanguage()"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0" nonce="UnFImuuG"></script>
 
       <div class="popup-remove"></div>
 
