--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -56,7 +56,7 @@
     <link rel="stylesheet" href="/styles/store/assets/content.css" />
     <link rel="stylesheet" href="/styles/store/assets/header.css" />
 
-    <link rel="stylesheet" href="/styles/store/pack/content.css">
+    <link rel="stylesheet" href="/styles/store/pack/content.css" />
     <link rel="stylesheet" href="/styles/store/pack/header.css" />
 
     <!--js-->
