--- a/store/texture/index.html
+++ b/store/texture/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Maps on the RFB Store</title>
+    <title>Texture Packs on the RFB Store</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="RareFrostbites Team" />
-    <meta property="og:url" content="https://rarefrostbites.pages.dev/store/map/" />
-    <meta property="og:title" content="Maps on the RFB Store" />
+    <meta property="og:url" content="https://rarefrostbites.pages.dev/store/texture/" />
+    <meta property="og:title" content="Texture Packs on the RFB Store" />
     <meta property="og:description" content="Entertainment is Yours!" />
     <meta
       property="og:image"
-      content="https://rarefrostbites.pages.dev/media/store/assets/store/map/store_map.jpg"
+      content="https://rarefrostbites.pages.dev/media/store/assets/store/texture/store_texture.jpg"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://rarefrostbites.pages.dev/store/map/"
+      content="https://rarefrostbites.pages.dev/store/texture/"
     />
-    <meta property="twitter:title" content="Maps on the RFB Store" />
+    <meta property="twitter:title" content="Texture Packs on the RFB Store" />
     <meta property="twitter:description" content="Entertainment is Yours!" />
     <meta
       property="twitter:image"
-      content="https://rarefrostbites.pages.dev/media/store/assets/store/map/store_map.jpg"
+      content="https://rarefrostbites.pages.dev/media/store/assets/store/texture/store_texture.jpg"
     />
 
-    <meta name="title" content="Maps on the RFB Store" />
+    <meta name="title" content="Texture Packs on the RFB Store" />
     <meta name="description" content="Entertainment is Yours!" />
     <meta name="keywords" content="RFB Store, RareFrostbites Team" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -56,7 +56,7 @@
     <link rel="stylesheet" href="/styles/store/assets/content.css" />
     <link rel="stylesheet" href="/styles/store/assets/header.css" />
 
-    <link rel="stylesheet" href="/styles/store/map/content.css" />
+    <link rel="stylesheet" href="/styles/store/texture/content.css" />
     <link rel="stylesheet" href="/styles/store/pack/header.css" />
 
     <!--js-->
@@ -68,7 +68,7 @@
     <script src="/js/store/assets/language.js"></script>
     <script>
       include("/components/store/pack/header.html", "", "div.header", 0);
-      include("/components/store/map/content.html", "", "div.content", 0);
+      include("/components/store/texture/content.html", "", "div.content", 0);
     </script>
     <script defer src="/js/store/assets/header.js"></script>
     <script defer>
