--- a/store/index.html
+++ b/store/index.html
@@ -56,7 +56,7 @@
     <link rel="stylesheet" href="/styles/store/assets/content.css" />
     <link rel="stylesheet" href="/styles/store/assets/header.css" />
 
-    <link rel="stylesheet" href="/styles/store/index/content.css">
+    <link rel="stylesheet" href="/styles/store/index/content.css" />
 
     <!--js-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
