--- a/store/com.rarefrostbites.11.looking_good.html
+++ b/store/com.rarefrostbites.11.looking_good.html
@@ -70,6 +70,7 @@
     <script>
       include("/components/store/pack/header.html", "", "div.header", 0);
       include("/components/store/com.rarefrostbites.11.looking_good.html", "", "div.content", 0);
+      include("/components/store/pack/mfa/000001/5.html", "", "div.mfa", 0);
     </script>
     <script defer src="/js/store/assets/header.js"></script>
     <script defer>
