--- a/store/com.rarefrostbites.14.horse_race.html
+++ b/store/com.rarefrostbites.14.horse_race.html
@@ -70,6 +70,7 @@
     <script>
       include("/components/store/pack/header.html", "", "div.header", 0);
       include("/components/store/com.rarefrostbites.14.horse_race.html", "", "div.content", 0);
+      include("/components/store/pack/mfa/000001/2.html", "", "div.mfa", 0);
     </script>
     <script defer src="/js/store/assets/header.js"></script>
     <script defer>
