--- a/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -73,6 +73,7 @@
       include("/components/store/pack/mfa/000001/c.html", "", "div.mfa", 0);
     </script>
     <script defer src="/js/store/assets/header.js"></script>
+    <script defer src="/js/store/assets/packs.js"></script>
     <script defer>
       $(function () {
         setTimeout(initializeLanguage, 500);
