--- a/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -67,7 +67,7 @@
     <script src="/js/store/language/initialize.js"></script>
     <script src="/js/store/language/pi-m.js"></script>
     <script src="/js/store/assets/language.js"></script>
-    <script>
+    <script defer>
       include("/components/store/pack/header.html", "", "div.header", 0);
       include("/components/store/assets/pack_skin.html", "", "div.content", 50);
       include("/components/store/pack/contents/com.rarefrostbites.9.rarechristmas_bundle/iframeembed.html", "", "div.iframe", 50);
