--- a/store/com.rarefrostbites.11.looking_good.html
+++ b/store/com.rarefrostbites.11.looking_good.html
@@ -67,7 +67,7 @@
     <script src="/js/store/language/initialize.js"></script>
     <script src="/js/store/language/pi-m.js"></script>
     <script src="/js/store/assets/language.js"></script>
-    <script>
+    <script defer>
       include("/components/store/pack/header.html", "", "div.header", 0);
       include("/components/store/assets/pack_skin.html", "", "div.content", 50);
       include("/components/store/pack/contents/com.rarefrostbites.11.looking_good/iframeembed.html", "", "div.iframe", 50);
@@ -80,7 +80,7 @@
       include("/components/store/pack/contents/com.rarefrostbites.11.looking_good/Pack Information.html", "", "div.pi-b1", 50);
       // include("/components/store/pack/contents/com.rarefrostbites.11.looking_good/Changelogs.html", "", "div.chlgs-b1", 50);
       include("/components/store/pack/contents/com.rarefrostbites.11.looking_good/pr.html", "", "div.pr", 50);
-      include("/components/store/pack/mfa/000001/c.html", "", "div.mfa", 50);
+      include("/components/store/pack/mfa/000001/5.html", "", "div.mfa", 50);
     </script>
     <script defer src="/js/store/assets/header.js"></script>
     <script defer src="/js/store/assets/packs.js"></script>
