--- a/embeds/store/com.rarefrostbites.8.1st_century.html
+++ b/embeds/store/com.rarefrostbites.8.1st_century.html
@@ -65,7 +65,7 @@
     <script src="/js/store/language/initialize.js"></script>
     <script src="/js/store/language/pi-m.js"></script>
     <script src="/js/store/assets/language.js"></script>
-    <script>
+    <script defer>
       include("/components/store/assets/pack_skin.html", "", "div.content", 50);
       include("/components/store/pack/contents/com.rarefrostbites.8.1st_century/pi.html", "", "div.pi", 50);
       include("/embeds/store/pack/mfa/000001/pa.html", "", "div.pa", 50);
