--- a/store/com.rarefrostbites.10.ya_ea.html
+++ b/store/com.rarefrostbites.10.ya_ea.html
@@ -79,6 +79,7 @@
       include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/pps.html", "", "div.pps", 50);
       include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/Pack Information.html", "", "div.pi-b1", 50);
       // include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/Changelogs.html", "", "div.chlgs-b1", 50);
+      include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/About Pack.html", "", "div.ab-b1", 50);
       include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/pr.html", "", "div.pr", 50);
       include("/components/store/pack/mfa/000001/c.html", "", "div.mfa", 50);
     </script>
