--- a/embeds/store/com.rarefrostbites.10.ya_ea.html
+++ b/embeds/store/com.rarefrostbites.10.ya_ea.html
@@ -73,6 +73,7 @@
       include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/pps.html", "", "div.pps", 50);
       include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/Pack Information.html", "", "div.pi-b1", 50);
       // include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/Changelogs.html", "", "div.chlgs-b1", 50);
+      include("/components/store/pack/contents/com.rarefrostbites.10.ya_ea/About Pack.html", "", "div.ab-b1", 50);
     </script>
     <script defer src="/js/store/assets/header.js"></script>
     <script defer src="/js/store/assets/packs.js"></script>
